# 30_dias_de_python

./: pyproject.toml
dia03/: testes_http.py
dia_04/: exemplos.py  testes_http.py
